static_in_pro/our_static/css/affiliation_types.css
.container-fluid {
    background-color: #E5B34D;
}

#types_wrapper {
    width: auto;
    height: auto;
    overflow: hidden;
    /* Next_btn is relative to #types wrapper*/
    position: relative;
}

#types_display {
    overflow: hidden;
    padding-top: 20px;
}

#mobile_types_list {
    width: 138px;
    float: left;
    margin-top: 12px;
    margin-bottom: 22px;
}

#mobile_types_list ul {
    padding: 0;
    margin: 0;
}

#mobile_types_list ul li {
    margin-left: -20px;
    font-size: 28px;
    list-style: none;
    line-height: 1.2;
    text-align: left;
    font-family: "Bariol";
    color: rgb(255, 255, 255);
    font-weight: bold;
    -moz-transform: matrix(0.75, 0, 0, 0.75, 0, 0);
    -webkit-transform: matrix(0.75, 0, 0, 0.75, 0, 0);
    -ms-transform: matrix(0.75, 0, 0, 0.75, 0, 0);
    cursor: pointer;
    padding-bottom: 10px;
}

div#mobile_types_list ul li:first-child {
    padding-top: 10px;
}

#mobile_types_list ul li:hover {
    opacity: 0.7;
    color: rgb(230, 89, 42) !important;
}

.type_button {
    /* so checkbox position will be determined according to type_button */
    position: relative;
    margin-top: 15px;
    margin-bottom: 15px;
    width: 140px;
    height: 140px;
    border-radius: 50%;
    font-size: 25px;
    text-align: center;
    text-decoration: none;
    border: 2px solid white;
    font-family: "Bariol";
    font-weight: bold;
    line-height: 1.2;
    background-color: white;
    color: rgb(249, 163, 51);
}

/*replace default checkbox with font awesome checkbox*/
/* hide the original checkbox */
.type_button input[type=checkbox] {
    display: none;
}

.type_button input[type=checkbox] + label:before {
    font-family: FontAwesome;
    font-size: 20px;
    display: inline-block;
}

/* unchecked icon */
.type_button input[type=checkbox] + label:before {
    content: "\f096";
    cursor: pointer;
}

/* space between checkbox and label */
.type_button input[type=checkbox] + label:before {
    /*letter-spacing: 10px;*/
}

/* checked icon */
.type_button input[type=checkbox]:checked + label:before {
    content: "\f046";
    cursor: pointer;
}

/* allow space for check mark */
.type_button input[type=checkbox]:checked + label:before {
    letter-spacing: -4px;
}

/*checkbox location relative to the button parent*/
.type_button label {
    position: absolute;
    bottom: 5px;
    left: 60px;
}

#next_page {
    border: none;
    position: absolute;
    right: 2px;
    bottom: 2px;
    cursor: pointer;
}

#next_page svg {
    width: 37px;
    height: 37px;
}

#next_page svg image {
    width: 65px;
    height: 65px;
}

/*remove button outer border*/
button:focus {
    outline: none;
}

span.description_text {
    width: 145px;
    height: 145px;
    margin: auto auto 10px auto;
}

/*================ media queries==================*/

/* Extra Small Devices, Phones */
@media only screen and (max-width: 767px) {
}

/* Custom Mini i-pad screen*/
@media only screen and (min-width: 480px) {
    .type_display {
        position: relative;
        right: 40px;
    }

    .type_button {
        width: 155px;
        height: 155px;
        font-size: 25px;
        margin-top: 25px;
        margin-bottom: 30px;
    }

    /*checkbox location relative to the button parent*/
    .type_button label {
        bottom: 5px;
        left: 67px;
    }

    span.description_text {
        width: 170px;
        height: 130px;
    }

    #next_page svg {
        width: 47px;
        height: 47px;
    }

    #next_page svg image {
        width: 60px;
        height: 60px;
    }

}

/* Small Devices, Tablets */
@media only screen and (min-width: 768px) {
    /*checkbox location relative to the button parent*/
    .type_display {
        right: 65px;
    }

    .type_button {
        margin-top: 90px;
        margin-bottom: 70px;
        width: 180px;
        height: 180px;
        font-size: 30px;
    }

    .type_button label {
        bottom: 8px;
        left: 79px;
    }

    span.description_text {
        width: 200px;
    }

    #mobile_types_list {
        width: 160px;
        /*margin-left: 60px;*/
        /* align to navbar */
        margin-left: 8.3%;
        margin-top: 55px;
        margin-bottom: 80px;
    }

    #mobile_types_list ul li {
        font-size: 33px;
        padding-bottom: 30px;
    }

    div#mobile_types_list ul li:first-child {
        padding-top: 30px;
    }

    #next_page {
        /*right: 40px;*/
        /*align according to navbar margins*/
        right: 8.3%;
        bottom: 40%;
    }

    #next_page svg {
        width: 60px;
        height: 60px;
    }

    #next_page svg image {
        width: 60px;
        height: 60px;
    }

}

/* Medium Devices, Desktops */
@media only screen and (min-width: 992px) {
    #types_first_row {
        padding-top: 50px;
    }

    #types_second_row {
        padding-bottom: 10px;
        padding-top: 0;
    }

    #mobile_types_list {
        display: none;
    }

    .type_button {
        margin: 20px 15px 20px 15px;
        padding: 0;
        width: 135px;
        height: 135px;
        font-size: 24px;
    }

    /*checkbox location relative to the button parent*/
    .type_button label {
        bottom: 5px;
        left: 57px;
    }

    span.description_text {
        position: absolute;
        top: 25px;
        left: 10px;
        width: 130px;
        height: 130px;
        font-size: 14px;
        color: rgb(230, 89, 42);
    }

    .type_button:hover {
        width: 155px;
        height: 155px;
        margin: 10px 5px 10px 5px;
        /*weaker color*/
        color: rgb(254, 234, 216);
    }

    /*on parent hover > change child css*/
    .type_button:hover > label {
        left: 67px;
        color: rgb(249, 163, 51);
    }

    /*on button hover, show description*/
    .type_button:hover > span {
        display: block !important;
    }

    /*back to default position*/
    .type_display {
        position: static;
    }

}

/* Large Devices, Wide Screens */
@media only screen and (min-width: 1200px) {
    #types_first_row {
        padding-top: 45px;
        width: 100%;
    }

    .type_button {
        margin: 22px 25px 22px 25px;
        width: 150px;
        height: 150px;
        font-size: 25px;
    }

    /*checkbox location relative to the button parent*/
    .type_button label {
        bottom: 5px;
        left: 65px;
    }

    span.description_text {
        top: 28px;
        left: 13px;
        width: 140px;
        height: 140px;
        font-size: 15px;
    }

    .type_button:hover {
        width: 172px;
        height: 172px;
        margin: 11px 14px 11px 14px;
    }

    /*checkbox position*/
    .type_button:hover > label {
        left: 76px;
    }
}

